# resume-cli

./: .bandit  .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.slim  GEMINI.md  IMPLEMENTATION_PLAN.md  Makefile  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  pr_body.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_job_description.txt  sample_job_posting.html  setup.py
.claude/skills/resume-cli-planner/: README.md  skill.md
.github/workflows/: .yamllint.yml  ci.yml  docker.yml  lint.yml  readme.yml  release.yml  security.yml  test.yml
.jules/: bolt.md  sentinel.md
api/: auth.py  main.py  models.py
cli/: __init__.py  main.py
cli/commands/: convert.py  init.py  linkedin.py  preview.py  templates.py  tutorials.py
cli/generators/: __init__.py  ai_generator.py  ai_judge.py  ats_generator.py  cover_letter_generator.py  docx_generator.py  interview_questions_generator.py  job_parser.py  keyword_density.py  mock_interview_generator.py  multi_language_generator.py  template.py  txt_generator.py  video_resume_generator.py
cli/integrations/: __init__.py  connection_finder.py  github_sync.py  job_parser.py  linkedin.py  linkedin_sync.py  offer_comparison.py  salary_research.py  tracking.py
cli/pdf/: __init__.py  converter.py  renderer.py  templates.py
cli/utils/: config.py  json_resume_converter.py  keyword_density.py  lazy.py  progress.py  schema.py  template_filters.py  template_utils.py  yaml_parser.py
config/: default.yaml  variants.yaml
desktop/: README.md  index.html  manifest.json  package-lock.json  package.json  sw.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/css/: styles.css
desktop/tests/: test_desktop.js
docs/: INTERVIEW_PREP_GUIDE.md
resume_pdf_lib/: MANIFEST.in  README.md  __init__.py  exceptions.py  generator.py  pyproject.toml
templates/: cover_letter_md.j2  cover_letter_tex.j2  email_md.j2  resume_academic_md.j2  resume_md.j2  resume_minimalist_md.j2  resume_modern_md.j2  resume_tech_md.j2  resume_tex.j2  resume_txt.j2
tests/: __init__.py  conftest.py  test_ai_generator_tailor_data.py  test_ai_judge.py  test_api_auth.py  test_api_endpoints.py  test_api_models.py  test_ats_generator.py  test_bracket_escape.py  test_cli_commands.py  test_cli_main_unit.py  test_config.py  test_cover_letter_generator.py  test_cover_letter_security.py  test_docx_generator.py  test_generator.py  test_github_sync.py  test_init_command.py  test_interview_questions_generator.py  test_job_parser.py  test_job_parser_integration.py  test_keyword_density.py  test_linkedin.py  test_linkedin_sync.py  test_pdf_security.py  test_progress.py  test_schema.py  test_security_fixes.py  test_template_generator.py  test_template_generator_security.py  test_template_marketplace.py  test_tracking.py  test_tutorials.py  test_txt_generator.py  test_yaml_parser.py
tracking/: README.md  SCHEMA.md  analyze_performance.py  requirements.txt
(+15 files in other folders)
