[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-pdf-lib"
version = "0.1.0"
description = "Shared Python library for PDF resume generation using LaTeX"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Alex C", email = "alex@example.com"}]
keywords = ["resume", "pdf", "latex", "jinja2", "generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jinja2>=3.0.0",
    "markupsafe>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_pdf_lib*"]

[tool.setuptools.package-data]
resume_pdf_lib = ["templates/*.j2", "templates/**/*"]
